--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         .secondary-btn { background: #E5E5EA; color: #000000; border: 1px solid var(--border); }
         .commit-btn { background: var(--green); color: white; }
 
+        /* Responsive Footer */
         .credit-footer { 
             text-align: center; margin-top: auto; padding: 15px 20px; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card);
         }
@@ -105,7 +106,9 @@
         }
         .credit-link { color: var(--subtext); text-decoration: none; font-weight: 600; font-size: 16px; }
         .credit-link span { color: var(--accent); text-decoration: underline; font-weight: 800; }
+        
         .version-tag { font-size: 11px; opacity: 0.4; margin-top: 5px; font-family: monospace; }
+        .refresh-link { color: var(--accent); font-size: 12px; text-decoration: underline; cursor: pointer; display: block; margin-top: 10px; font-weight: bold; }
 
         #timer { font-size: clamp(100px, 35vw, 450px); font-weight: 200; text-align: center; margin: auto 0; font-variant-numeric: tabular-nums; color: #000; }
         #reportLog { background: var(--card); border-radius: 18px; padding: 25px; flex: 1; overflow-y: auto; font-family: monospace; font-size: 22px; border: 1px solid var(--border); color: #000; }
@@ -148,7 +151,8 @@
                 <a href="https://bit.ly/m/SDTM" target="_blank" class="credit-link"><span>Visit Our Website ↗</span></a>
             </div>
             <div class="credit-link" style="font-weight: 400;">Created by Southern Dutchess Toastmasters</div>
-            <div id="versionDisplay" class="version-tag">FETCHING VERSION...</div>
+            <div id="versionDisplay" class="version-tag">LOADING...</div>
+            <div class="refresh-link" onclick="forceAppUpdate()">Update / Refresh App</div>
         </div>
     </div>
 
@@ -257,12 +261,30 @@
             }
             renderSpeakerList(allSpeakers); 
             
+            // Dynamic Cache Puller
             if ('caches' in window) {
                 caches.keys().then(names => {
-                    if (names.length > 0) document.getElementById('versionDisplay').innerText = names[0].toUpperCase();
-                    else document.getElementById('versionDisplay').innerText = "V2.1.2-LOCAL";
+                    if (names.length > 0) {
+                        document.getElementById('versionDisplay').innerText = names[0].toUpperCase();
+                    } else {
+                        document.getElementById('versionDisplay').innerText = "V2.1.2-LOCAL";
+                    }
                 });
             }
+        }
+
+        function forceAppUpdate() {
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.getRegistrations().then(registrations => {
+                    for(let registration of registrations) { registration.unregister(); }
+                });
+            }
+            if ('caches' in window) {
+                caches.keys().then(names => {
+                    for (let name of names) caches.delete(name);
+                });
+            }
+            window.location.reload(true);
         }
 
         function saveSpeaker() {
@@ -324,7 +346,7 @@
         function startTimer() {
             const currentName = document.getElementById('name').value.trim();
             if(!lims.g || !currentName) {
-                openModal("Required", "Select a speech type and a speaker.", () => {});
+                openModal("Missing Info", "Choose a speaker and a speech type.", () => {});
                 return;
             }
             document.getElementById('spkName').innerText = currentName;
@@ -379,7 +401,7 @@
 
         function loadReport() {
             let logs = JSON.parse(localStorage.getItem('sdtm_logs')||"[]");
-            document.getElementById('reportLog').innerText = logs.length ? logs.join('\n') : "No data logged.";
+            document.getElementById('reportLog').innerText = logs.length ? logs.join('\n') : "No entries.";
         }
 
         async function shareReport() {
@@ -390,18 +412,17 @@
             if (navigator.share) await navigator.share({ title: 'Timer Report', text: text });
             else { 
                 const el = document.createElement('textarea'); el.value = text; document.body.appendChild(el); el.select(); document.execCommand('copy'); document.body.removeChild(el); 
-                openModal("Success", "Report copied to clipboard!", () => {});
+                openModal("Copied", "Text ready to paste.", () => {});
             }
         }
 
-        // Service Worker Update Check with Cache-Buster
+        // Service Worker Management
         if ('serviceWorker' in navigator) {
-            const buster = Date.now();
-            navigator.serviceWorker.register('sw.js?v=' + buster).then(reg => {
+            navigator.serviceWorker.register('sw.js?v=' + Date.now()).then(reg => {
                 reg.onupdatefound = () => {
-                    const installingWorker = reg.installing;
-                    installingWorker.onstatechange = () => {
-                        if (installingWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                    const sw = reg.installing;
+                    sw.onstatechange = () => {
+                        if (sw.state === 'installed' && navigator.serviceWorker.controller) {
                             window.location.reload();
                         }
                     };
