--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             background: var(--card); border-radius: 18px; padding: clamp(20px, 3.5vw, 35px); 
             display: flex; align-items: center; justify-content: space-between; 
             border: 1px solid var(--border); color: var(--text); text-align: left; 
-            width: 100%; flex-shrink: 0; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+            width: 100%; flex-shrink: 0; box-shadow: 0 2px 8px rgba(0,0,0,0.05); text-decoration: none;
         }
         .card-content h3 { margin: 0; font-size: clamp(24px, 3.8vw, 36px); font-weight: 700; }
         .card-content p { margin: 4px 0 0; font-size: clamp(16px, 2.2vw, 22px); color: var(--subtext); }
@@ -96,17 +96,20 @@
         .secondary-btn { background: #E5E5EA; color: #000000; border: 1px solid var(--border); }
         .commit-btn { background: var(--green); color: white; }
 
-        /* FIXED CREDIT FOOTER */
+        /* UPDATED RESOURCE FOOTER */
         .credit-footer { 
-            text-align: center; margin-top: auto; padding: 20px 20px; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card);
+            text-align: center; padding: 20px; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card);
         }
-        .docs-link {
-            display: inline-block; color: var(--accent); text-decoration: underline; font-weight: 800; font-size: 19px; margin-bottom: 8px;
+        .resource-row { display: flex; gap: 10px; margin-bottom: 12px; justify-content: center; }
+        .res-btn {
+            flex: 1; background: #F2F2F7; color: var(--accent); text-decoration: none;
+            padding: 12px; border-radius: 12px; font-weight: 700; font-size: 16px;
+            border: 1px solid var(--border);
         }
         .credit-text { 
-            display: block; color: var(--text); font-weight: 600; font-size: 16px; margin: 0;
+            display: block; color: var(--text); font-weight: 700; font-size: 15px; margin: 0;
         }
-        .version-tag { display: block; font-size: 12px; opacity: 0.5; font-weight: 400; margin-top: 5px; color: #000; }
+        .version-tag { display: block; font-size: 12px; opacity: 0.5; font-weight: 400; margin-top: 4px; color: #000; }
 
         /* TIMER SCREEN */
         #timer { font-size: clamp(100px, 35vw, 450px); font-weight: 200; text-align: center; margin: auto 0; font-variant-numeric: tabular-nums; color: #000; }
@@ -144,10 +147,14 @@
                 <div style="color:var(--red); font-weight:800; width:100%; text-align:center; font-size: 22px;">CLEAR MEETING LOGS</div>
             </button>
         </div>
+        
         <div class="credit-footer">
-            <a href="https://bit.ly/m/SDTM" class="docs-link">Visit Our Website ↗</a>
+            <div class="resource-row">
+                <a href="https://bit.ly/m/SDTM" target="_blank" class="res-btn">Visit Website ↗</a>
+                <a href="https://kevinpshan.github.io/Kevin_Manual/" target="_blank" class="res-btn">User Manual ↗</a>
+            </div>
             <p class="credit-text">Created by Southern Dutchess Toastmasters</p>
-            <span class="version-tag">Version 2.4.0</span>
+            <span class="version-tag">Version 2.4.1</span>
         </div>
     </div>
 
