--- a/test/index.html
+++ b/test/index.html
@@ -22,21 +22,6 @@
             --warning: #ffcc00;
         }
 
-        /* WATERMARK LOGIC: This cannot shift layout because it's attached to the background */
-        body::before {
-            content: "STAGING v2.4.1";
-            position: fixed;
-            top: env(safe-area-inset-top);
-            right: 10px;
-            color: rgba(255, 149, 0, 0.7);
-            font-size: 10px;
-            font-weight: 900;
-            z-index: 99999;
-            pointer-events: none;
-            letter-spacing: 1px;
-            font-family: -apple-system, sans-serif;
-        }
-
         * { -webkit-tap-highlight-color: transparent; box-sizing: border-box; }
 
         body {
@@ -98,7 +83,6 @@
 
         .danger-btn { background: var(--danger); margin-top: 10px; margin-bottom: 20px; }
 
-        /* Setup Screen Styles */
         .input-group { display: flex; gap: 10px; margin-bottom: 20px; }
         input[type="text"] {
             flex: 1;
@@ -145,7 +129,6 @@
         .preset-btn div:first-child { font-weight: 700; font-size: 15px; }
         .preset-btn div:last-child { font-size: 12px; color: #636366; }
 
-        /* Timer Screen */
         #timerDisplay {
             flex: 1;
             display: flex;
@@ -158,7 +141,6 @@
         .time-text { font-size: 120px; font-weight: 800; margin: 20px 0; font-variant-numeric: tabular-nums; }
         .timer-name { font-size: 28px; font-weight: 700; text-transform: uppercase; letter-spacing: 1px; }
 
-        /* Logs Screen */
         .log-item {
             background: var(--card-bg);
             padding: 15px;
@@ -172,7 +154,6 @@
         .log-info p { margin: 2px 0 0; font-size: 14px; color: #636366; }
         .log-time { font-weight: 700; font-size: 18px; }
 
-        /* Modal */
         #modalOverlay {
             display: none;
             position: fixed;
@@ -232,7 +213,7 @@
             <a href="https://bit.ly/m/SDTM" target="_blank" class="res-btn">Visit Website ↗</a>
             <a href="manual.html" class="res-btn">User Manual ↗</a>
             <p class="credit-text">Created by Southern Dutchess Toastmasters</p>
-            <span class="version-tag">Version 2.4.1</span>
+            <span class="version-tag">Version 2.4.1 (TEST)</span>
         </div>
     </div>
 
@@ -322,7 +303,6 @@
             if(screenId === 'logs') renderLogs();
         }
 
-        // Roster Management
         function renderRoster() {
             const container = document.getElementById('rosterList');
             container.innerHTML = roster.map(name => `
@@ -357,7 +337,6 @@
             renderRoster();
         }
 
-        // Timer Logic
         function setPreset(g, y, r, id) {
             currentThresholds = { green: g, yellow: y, red: r };
             document.querySelectorAll('.preset-btn').forEach(b => b.classList.remove('selected'));
@@ -421,7 +400,6 @@
             showScreen('menu');
         }
 
-        // Logs Logic
         function renderLogs() {
             const container = document.getElementById('logContainer');
             if(logs.length === 0) {
@@ -453,7 +431,6 @@
             }
         }
 
-        // Club Modal
         function openClubModal() {
             document.getElementById('clubNameInput').value = localStorage.getItem('sdtm_club') || '';
             document.getElementById('modalOverlay').style.display = 'flex';
@@ -470,7 +447,6 @@
             closeModal();
         }
 
-        // Service Worker
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('sw.js');
         }
